# Sir-5rM9

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  app.code-workspace  bot.Dockerfile  docker-compose.yaml  main.py  ocr.Dockerfile  ocr_server.Dockerfile  pyproject.toml  sir-5rm9.code-workspace  start.bat  utils.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
.github/workflows/: ci.yaml  cicd.yaml
docs/sir_5rm9/: hello.md  index.md  logger.md  on_ready.md
sir_5rm9/: ark.py  echo.py  hello.py  logger.py  ocr.py  ollama.py  on_ready.py  setup_all.py
