[project]
name = "sir-5rm9"
version = "0.1.0"
description = "Discord の Bot"
authors = [{ name = "magurouhiru" }]
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = ["discord (>=2.3.2,<3.0.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = ["pdoc (>=16.0.0,<17.0.0)", "ruff (>=0.15.6,<0.16.0)"]
