[project]
name = "sir-5rm9"
version = "0.1.0"
description = "Discord の Bot"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "discord>=2.3.2",
    "easyocr>=1.7.2",
    "numpy>=2.4.3",
    "ollama>=0.6.1",
    "pillow>=12.1.1",
]

[dependency-groups]
dev = ["pdoc>=16.0.0", "ruff>=0.15.6", "tomlq>=0.1.0"]
